Fixed URL in example notebooks.

--- a/examples/howto_advanced_query.ipynb
+++ b/examples/howto_advanced_query.ipynb
@@ -126,7 +126,7 @@
    "outputs": [],
    "source": [
     "print(\"Querying the SLED server...\")\n",
-    "r = requests.post(\"http://127.0.0.1:8000/api/query-lenses-full/\",\n",
+    "r = requests.post(\"https://sled.amnh.org/api/query-lenses-full/\",\n",
     "                  data=json.dumps(query_pars),\n",
     "                  headers={'Content-Type':'application/json','User-Agent':'SLED-api/1.0'},\n",
     "                  auth=HTTPBasicAuth(username,password)\n",
