--- a/examples/lens_upload.ipynb
+++ b/examples/lens_upload.ipynb
@@ -43,7 +43,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "urlquery = \"http://127.0.0.1:8000/api/upload-lenses/\"\n",
+    "urlquery = \"https://sled.amnh.org/api/upload-lenses/\"\n",
     "username, password = os.getenv('SLED_USERNAME'), os.getenv('SLED_PASSWORD')\n",
     "\n",
     "if (not username) or (not password):\n",
