--- a/examples/box_search_example.ipynb
+++ b/examples/box_search_example.ipynb
@@ -42,7 +42,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "urlquery = \"http://127.0.0.1:8000/api/query-lenses-full/\"\n",
+    "urlquery = \"https://sled.amnh.org/api/query-lenses-full/\"\n",
     "username, password = os.getenv('SLED_USERNAME'), os.getenv('SLED_PASSWORD')\n",
     "\n",
     "if (not username) or (not password):\n",
@@ -342,7 +342,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.9.18"
   }
  },
  "nbformat": 4,
