--- a/examples/general_query.ipynb
+++ b/examples/general_query.ipynb
@@ -42,7 +42,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "urlquery = \"http://127.0.0.1:8000/api/query-lenses-full/\"\n",
+    "urlquery = \"https://sled.amnh.org/api/query-lenses-full/\"\n",
     "username, password = os.getenv('SLED_USERNAME'), os.getenv('SLED_PASSWORD')\n",
     "\n",
     "if (not username) or (not password):\n",
