--- a/examples/paper_upload_lens_association.ipynb
+++ b/examples/paper_upload_lens_association.ipynb
@@ -42,7 +42,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "urlquery = \"http://127.0.0.1:8000/api/upload-papers/\"\n",
+    "urlquery = \"https://sled.amnh.org/api/upload-papers/\"\n",
     "username, password = os.getenv('SLED_USERNAME'), os.getenv('SLED_PASSWORD')\n",
     "\n",
     "if (not username) or (not password):\n",
