Fixed uploading collection via the API and Celery.

--- a/examples/howto_create_paper.ipynb
+++ b/examples/howto_create_paper.ipynb
@@ -154,7 +154,7 @@
     "                  headers={'Content-Type':'application/json','User-Agent':'SLED-api/1.0'},\n",
     "                  auth=HTTPBasicAuth(username,password)\n",
     "                  )\n",
-    "dbquery = json.loads(r.text)\n"
+    "dbquery = json.loads(r.text)\n",
     "print(\"done\")"
    ]
   },
