--- a/examples/howto_upload_lenses.ipynb
+++ b/examples/howto_upload_lenses.ipynb
@@ -154,7 +154,8 @@
     "                  headers={'Content-Type':'application/json','User-Agent':'SLED-api/1.0'},\n",
     "                  auth=HTTPBasicAuth(username,password)\n",
     "                  )\n",
-    "dbquery = json.loads(r.text)"
+    "dbquery = json.loads(r.text)\n",
+    "print(\"done\")"
    ]
   },
   {
