--- a/examples/howto_create_collection.ipynb
+++ b/examples/howto_create_collection.ipynb
@@ -143,7 +143,8 @@
     "                  headers={'Content-Type':'application/json','User-Agent':'SLED-api/1.0'},\n",
     "                  auth=HTTPBasicAuth(username,password)\n",
     "                  )\n",
-    "dbquery = json.loads(r.text)"
+    "dbquery = json.loads(r.text)\n",
+    "print(\"done\")"
    ]
   },
   {
@@ -165,6 +166,14 @@
    "source": [
     "print(dbquery)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3f7af9d9",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
